{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b79f4b00-dc57-4442-b69f-1b39b242fd53",
            "actions": [
                {
                    "name": "LeftHook",
                    "type": "Button",
                    "id": "0d1c6c37-46fe-443d-af3f-43d874d3dd43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHook",
                    "type": "Button",
                    "id": "74c93442-9b2b-4e1d-9b2d-f5808085650d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6deb9b09-729f-435e-8653-f50d324da213",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8e36d86-9daf-4aa5-9b2e-9b88a31eb260",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}